--- a/index.html
+++ b/index.html
@@ -10,3 +10,18 @@
    <h1>Hello My Test World Again</h1> 
 </body>
 </html>
+
+
+// To create a new branch
+1. got to your code terminal 
+2. git checkout -b "branch-name"
+3. Modifiy your code 
+4. git add .
+5. git commit -m "type your message here"
+6. git push --set-upstream origin branch-name // git push
+
+
+// To raise a Pull request
+1. Go to the new branch on github
+2. click on contribute, this will give you a dropdown
+3. Click on "Create Pull request"
